[package]
name = "packx"
version = "0.4.0"
edition = "2021"

license = "Apache-2.0"
homepage = "https://tapedrive.io"
description = "Your data, permanently recorded — uncensorable, uneditable, and here for good."
repository = "https://github.com/tapedrive-io/packx"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]
documentation = "https://docs.rs/packx"

[dependencies]
blake3 = "1.8.2"
bytemuck = { version = "1.14", features = ["derive"] }
solana-program = { version = ">=2.1.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"

[[bench]]
name = "difficulty"
harness = false

[[bench]]
name = "large_file"
harness = false

[features]
default = ["std"]
std = []
solana = ["solana-program"]
